# Hospital5G

./: .gitignore  CMakeLists.txt  README.md  build.sh
master/: CMakeLists.txt  main.cc
master/config/: config.ini
master/mqtt/: mqtt_client.cc  mqtt_client.h
master/template/: versin.h.in
master/usart/: usart.cc  usart.h
master/xfframework/: common.cc  common.h  config.cc  config.h  logging.cpp  logging.h
